# template-juce

./: .clang-format  .gitignore  CMakeLists.txt  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  packages.config  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.vite.json  vite.config.ts
app/: CMakeLists.txt
cmake/: Common.cmake  IncludeBefore.cmake  Packages.cmake
gui/: App.tsx  index.html  index.ts  index.tsx
gui/components/: App.tsx  GainSlider.tsx  InvertPhaseToggle.tsx  Logo.tsx
gui/css/: index.css
gui/modules/: changeTheme.ts  svg.ts
projects/: CMakeLists.txt
projects/apps/: CMakeLists.txt
projects/apps/console/: CMakeLists.txt
projects/apps/console/src/: App.cxx
projects/apps/gui/: CMakeLists.txt  index.html  index.tsx  tsconfig.json  vite.config.ts
projects/apps/gui/components/: App.tsx  Fetch.tsx
projects/apps/gui/css/: index.css  tailwind.config.cjs  tailwind.config.ts
projects/apps/gui/modules/: theme.ts
projects/apps/gui/src/: App.cxx  Browser.cxx  MainComponent.cxx  MainComponent.hxx
projects/plugins/: CMakeLists.txt
projects/plugins/gain/: CMakeLists.txt  index.html  index.tsx  tsconfig.json  vite.config.ts
projects/plugins/gain/components/: App.tsx  GainSlider.tsx  InvertPhaseToggle.tsx  Logo.tsx
projects/plugins/gain/css/: tailwind.config.cjs  tailwind.config.ts
projects/plugins/gain/gui/: index.html
projects/plugins/gain/gui/components/: App.tsx
projects/plugins/gain/gui/modules/: theme.ts
projects/plugins/gain/modules/: theme.ts
projects/plugins/gain/src/: Browser.cxx  Browser.hxx  Editor.hxx  Processor.hxx  Resource.cxx  Resource.hxx
src/: Browser.cxx  Browser.hxx  Editor.cxx  Editor.hxx  Processor.cxx  Processor.hxx  Resource.cxx  Resource.hxx
tools/: gain_favicon.ps1  icon.ps1
